--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.1",
-    "@angular/cdk": "^7.2.1",
-    "@angular/common": "~7.2.1",
-    "@angular/compiler": "~7.2.1",
-    "@angular/core": "~7.2.1",
+    "@angular/animations": "^7.2.2",
+    "@angular/cdk": "^7.2.2",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/core": "^7.2.2",
     "@angular/fire": "^5.1.1",
-    "@angular/forms": "~7.2.1",
-    "@angular/material": "^7.2.1",
-    "@angular/platform-browser": "~7.2.1",
-    "@angular/platform-browser-dynamic": "~7.2.1",
-    "@angular/router": "~7.2.1",
-    "core-js": "^2.5.4",
-    "firebase": "^5.8.0",
+    "@angular/forms": "^7.2.2",
+    "@angular/material": "^7.2.2",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
+    "core-js": "^2.6.3",
+    "firebase": "^5.8.1",
     "material-design-icons": "^3.0.1",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.28"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.2",
-    "@angular/cli": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.1",
-    "@angular/language-service": "~7.2.1",
-    "@types/node": "~10.12.18",
-    "@types/jasmine": "~3.3.6",
+    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular/cli": "^7.2.3",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/language-service": "^7.2.2",
+    "@types/jasmine": "^3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.18",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
