--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "angularx-qrcode": "^1.5.2",
     "core-js": "^2.6.3",
     "firebase": "^5.8.1",
     "material-design-icons": "^3.0.1",
